<package>
  <name>pointcloud_utils</name>
  <version>1.0.0</version>
  <description>
    This package contains (TODO).
  </description>
  <author email="dawid.seredynski@gmail.com">Dawid Seredynski</author>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>collision_convex_model</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>kin_dyn_model</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>pointcloud_utils_msgs</build_depend>
  <build_depend>rcprg_ros_utils</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>rtt_rosnode</build_depend>
  <build_depend>rtt_sensor_msgs</build_depend>
  <build_depend>rtt_std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>collision_convex_model</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>kin_dyn_model</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>pointcloud_utils_msgs</run_depend>
  <run_depend>rcprg_ros_utils</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_rosnode</run_depend>
  <run_depend>rtt_sensor_msgs</run_depend>
  <run_depend>rtt_std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
